# haskell

./: README.md  stack.yaml
docker/gpu/: Dockerfile
tensorflow-dqn/: Dockerfile  ale_c_wrapper.h  tensorflow-dqn.cabal
tensorflow-dqn/app/: Atari.hs
tensorflow-dqn/data/: index.html  main.js
tensorflow-dqn/src/: ALE.chs
tensorflow-dqn/src/RL/: Environment.hs
tensorflow-dqn/src/RL/Environment/: Monitor.hs  Transformer.hs
tensorflow-dqn/src/TensorFlow/Examples/: DQN.hs
tensorflow-dqn/src/TensorFlow/Examples/DQN/: GameMonitor.hs  GameTransformers.hs  ReplayMemory.hs
tensorflow-mnist/: tensorflow-mnist.cabal
tensorflow-mnist/app/: Main.hs  Seq.hs
tensorflow-ops/: tensorflow-ops.cabal
tensorflow-ops/src/TensorFlow/: Gradient.hs  Initializers.hs  Layer.hs  Ops.hs  RNN.hs  Variable.hs
tensorflow-ops/tests/: MiscTest.hs
tensorflow-proto/: tensorflow-proto.cabal
tensorflow/src/TensorFlow/: Core.hs
