name:                tensorflow-dqn
version:             0.1.0.0
synopsis:            TensorFlow demo application for DQN model.
description:         Please see README.md
homepage:            https://github.com/tensorflow/haskell#readme
license:             Apache
author:              TensorFlow authors
maintainer:          tensorflow-haskell@googlegroups.com
copyright:           Google Inc.
category:            Machine Learning
build-type:          Custom
cabal-version:       >=1.22
data-files:          data/*.js
                   , data/*.html

library
  hs-source-dirs:  src
  exposed-modules:  ALE
                  , TensorFlow.Examples.DQN
                  , TensorFlow.Examples.DQN.ReplayMemory
                  , RL.Environment
                  , RL.Environment.Transformer
                  , RL.Environment.Monitor
                  -- , TensorFlow.Examples.DQN.GameTransformers
                  -- , TensorFlow.Examples.DQN.GameMonitor
  build-tools:  c2hs
  build-depends:  base >= 4.7 && < 5
                , binary
                , bytestring
                , containers
                , directory
                , filepath
                , lens-family
                , lens-family-th
                , monad-extras
                , mtl
                , proto-lens
                , random
                , split
                , spool
                , stm
                , tensorflow
                , tensorflow-core-ops == 0.1.*
                , tensorflow-ops == 0.1.*
                , tensorflow-proto == 0.1.*
                , tensorflow-logging == 0.1.*
                , text
                , time
                , transformers
                , vector
                , zlib
                , data-default
                , friday
                , sdl2
                , stm
                , linear
  default-language:    Haskell2010
  include-dirs: .
  extra-libraries: ale_c

executable Atari
  default-language: Haskell2010
  main-is: Atari.hs
  hs-source-dirs: app
  build-depends: base
               , bytestring
               , directory
               , filepath
               , http-types
               , lens-family
               , proto-lens
               , spool
               , tensorflow
               , tensorflow-dqn
               , tensorflow-mnist
               , tensorflow-mnist-input-data
               , tensorflow-ops
               , tensorflow-proto
               , text
               , transformers
               , vector
  ghc-options:
      -O2
      -threaded
      -with-rtsopts=-N2

custom-setup
  setup-depends: Cabal
                , base >= 4.7 && < 5
                , directory
                , filepath

source-repository head
  type:     git
  location: https://github.com/tensorflow/haskell
